WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180846
Clearing WebSite data on iOS does not clear the Fetch Cache
https://bugs.webkit.org/show_bug.cgi?id=180846
Summary
Clearing WebSite data on iOS does not clear the Fetch Cache
Chris Dumez
Reported
2017-12-14 15:55:00 PST
Clearing WebSite data on iOS does not clear the Fetch Cache.
Attachments
WIP Patch
(4.49 KB, patch)
2017-12-14 15:57 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(5.60 KB, patch)
2017-12-14 16:20 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2017-12-14 15:55:18 PST
<
rdar://problem/36060129
>
Chris Dumez
Comment 2
2017-12-14 15:57:03 PST
Created
attachment 329413
[details]
WIP Patch
Chris Dumez
Comment 3
2017-12-14 16:20:26 PST
Created
attachment 329415
[details]
Patch
youenn fablet
Comment 4
2017-12-14 16:34:16 PST
Comment on
attachment 329415
[details]
Patch Yipee!
Chris Dumez
Comment 5
2017-12-14 16:50:10 PST
Comment on
attachment 329415
[details]
Patch Clearing flags on attachment: 329415 Committed
r225944
: <
https://trac.webkit.org/changeset/225944
>
Chris Dumez
Comment 6
2017-12-14 16:50:12 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug