Clearing WebSite data on iOS does not clear the Fetch Cache https://bugs.webkit.org/show_bug.cgi?id=180846 <rdar://problem/36060129>

Reviewed by Youenn Fablet.

When clearing WebSite data, construct the engine for the given sessionID
if missing, instead of not clearing anything when the engine is missing.

* NetworkProcess/NetworkProcess.cpp:
(WebKit::NetworkProcess::deleteWebsiteData):
(WebKit::NetworkProcess::deleteWebsiteDataForOrigins):

Canonical link: https://commits.webkit.org/196742@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225944 268f45cc-cd09-0410-ab3c-d52691b4dbfc